Fix bug with overlapping text in accept request and reviews on worked on favours

--- a/service-barter-react/src/components/accept_picker/accept_picker.scss
+++ b/service-barter-react/src/components/accept_picker/accept_picker.scss
@@ -1,3 +1,7 @@
 .paper {
-	background-color: #70cdff;
+    background-color: #70cdff;
+}
+
+.listItem {
+    padding-right: 170px;
 }
